# raisimGym

./: .gitignore  CHANGE_LOG.md  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  compile.bash  setup.py  testAll.sh
dockers/cpu/: Dockerfile
dockers/gpu/: Dockerfile  delete_cache.bash  run_anymal_example.bash  runner.bash
dockers/ubuntu1604/: Dockerfile
dockers/ubuntu1804/: Dockerfile
raisim_gym/: __init__.py
raisim_gym/algo/ppo2/: __init__.py  ppo2.py
raisim_gym/algo/ppo3/: README  __init__.py  ppo3.py
raisim_gym/archi/: policies.py
raisim_gym/env/: RaisimGymEnv.hpp  RaisimGymVecEnv.py  RaisimServer.hpp  RewardLogger.hpp  VectorizedEnvironment.hpp  __init__.py  debug_app.cpp  raisim_gym.cpp
raisim_gym/env/env/: __init__.py
raisim_gym/env/env/ANYmal/: Environment.hpp  __init__.py
raisim_gym/env/env/ANYmal/ANYmal_bear2/: anymal.urdf  anymal_foot.dae  anymal_hip_l.dae  anymal_hip_r.dae  anymal_minimal.urdf  anymal_realsense_mount_d435.dae  anymal_shank_l.dae  anymal_shank_r.dae  anymal_thigh_l.dae  anymal_thigh_r.dae  default_cfg.yaml  handle_mount_2.dae  realsense_d435.dae
raisim_gym/env/env/hummingbird/: Environment.hpp  README  __init__.py  visSetupCallback.hpp
raisim_gym/env/env/laikago/: Environment.hpp  __init__.py
raisim_gym/env/env/mabi/: Environment.hpp  __init__.py
raisim_gym/env/visualizer/: deserializer.hpp  guiState.hpp  helper.hpp  raisimBasicImguiPanel.hpp  raisimKeyboardCallback.hpp
raisim_gym/helper/: raisim_gym_helper.py
scripts/: anymal_bind_locomotion.py  anymal_blind_locomotion.py  anymal_ppo3.py  laikago_blind_locomotion.py  quadrotor_position_tracking.py
scripts/anymal_ppo3/: README  anymal_ppo3.py  default_cfg.yaml
scripts/anymal_ppo3/model/: model.py
tests/: test.py  test_anymal_example.bash  test_anymal_example2.bash
(+11 files in other folders)
